z-index bug

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -22,6 +22,7 @@ nav#options {
   position: absolute;
   top: 20px;
   left: 20px;
+  z-index: 999;
 }
 
 nav#options a {
